force-app/main/default/objects/ServiceAppointment/fields/Assigned_Resource_is_WO_Primary__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resource_is_WO_Primary__c</fullName>
    <description>28757 Work Order On Hold</description>
    <formula>Work_Order__r.Primary_Resource__r.Service_Resource__c =  Assigned_Resource__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Resource is WO Primary</label>
    <type>Checkbox</type>
</CustomField>