force-app/main/default/objects/ServiceAppointment/fields/Assigned_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User_Name__c</fullName>
    <formula>Assigned_User__r.FirstName &amp; &apos; &apos; &amp; Assigned_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned User Name</label>
    <type>Text</type>
</CustomField>