force-app/main/default/objects/ServiceAppointment/fields/Cancelation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancelation_Reason__c</fullName>
    <description>#30490</description>
    <label>Cancelation Reason</label>
    <type>TextArea</type>
</CustomField>