force-app/main/default/objects/ServiceAppointment/fields/Cannot_Complete_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Complete_Reason__c</fullName>
    <description>#30490</description>
    <label>Cannot Complete Reason</label>
    <type>TextArea</type>
</CustomField>