force-app/main/default/objects/ServiceAppointment/fields/Cannot_Complete_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Complete_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#30490</description>
    <label>Cannot Complete Reviewed</label>
    <type>Checkbox</type>
</CustomField>