force-app/main/default/objects/ServiceAppointment/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>46841: Youreka requirement to enable Submitter picklist. We are currently hiding in the UI. Will need to update at time of SA scheduling and clear if unscheduled.</description>
    <inlineHelpText>46841: Youreka requirement to enable Submitter picklist. We are currently hiding in the UI. Will need to update at time of SA scheduling and clear if unscheduled.</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Crew Leader Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>