force-app/main/default/objects/ServiceAppointment/fields/Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Hours_Remaining__c</fullName>
    <description>28797 Cannot complete flow user will update this value so that the after save flow can create the follow up appointment. This enables us to eliminate the need to assign mobile users the SA Create permisison since the after save runs in system context whereby as of today SF doesn&apos;t allow for this via mobile flow</description>
    <label>Hours Remaining</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>