force-app/main/default/objects/ServiceAppointment/fields/Last_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Status_Change_Date__c</fullName>
    <description>46765 for reporting 47334 but tied into status change story</description>
    <inlineHelpText>Date/Time when the Status was last changed</inlineHelpText>
    <label>Last Status Change Date</label>
    <type>DateTime</type>
</CustomField>