force-app/main/default/objects/ServiceAppointment/fields/Mobile_App_List_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_List_Line_1__c</fullName>
    <description>28069 List view setting for mobile
45909</description>
    <formula>AppointmentNumber&amp;&quot;: &quot;&amp; Work_Order__r.Formatted_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile App List Line 1</label>
    <type>Text</type>
</CustomField>