force-app/main/default/objects/ServiceAppointment/fields/Mobile_App_List_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_List_Line_2__c</fullName>
    <description>#28069 Mobile App 2nd row not bold
45909
46323 Add Project #</description>
    <formula>TEXT( Status )&amp;&quot; - &quot;&amp; LEFT(Type_Formula__c,20)&amp;&quot; - Project: &quot;&amp;  Work_Order__r.Sub_Project__r.Project__r.Name  &amp;&quot; - &quot;&amp; Account.Name &amp;&quot; - Foreman: &quot;&amp; WO_Primary_Resource__c
&amp; &quot; - Due Date: &quot;&amp;  TEXT(  MONTH(DATEVALUE(DueDate))) &amp;&quot;/&quot;&amp;  TEXT(  DAY(DATEVALUE(DueDate))) &amp;&quot;/&quot;&amp;TEXT(  YEAR(DATEVALUE(DueDate))) &amp;&quot; - &quot;&amp; LEFT( Subject ,50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile App List Line 2</label>
    <type>Text</type>
</CustomField>