force-app/main/default/objects/ServiceAppointment/fields/Mobile_User_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Mobile_User_Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>28757 required to do advanced evaluation of the related Work Order. Triggered by Mobile SCR-Change Status flow and launches after save flow</description>
    <label>Mobile User Rejected</label>
    <type>Checkbox</type>
</CustomField>