force-app/main/default/objects/ServiceAppointment/fields/Other_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Type__c</fullName>
    <description>28058</description>
    <inlineHelpText>Other Type Description</inlineHelpText>
    <label>Other Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>