force-app/main/default/objects/ServiceAppointment/fields/Prevent_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Prevent_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>46698 checkbox for validation rule. Field is checked when user tries to delete records in defined statuses</description>
    <inlineHelpText>Checked by record deletion flow based on status</inlineHelpText>
    <label>Prevent Deletion</label>
    <type>Checkbox</type>
</CustomField>