force-app/main/default/objects/ServiceAppointment/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>28757 Foreman enters when rejected. Value is used for chatter notification and is then cleared.</description>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>