force-app/main/default/objects/ServiceAppointment/fields/SA_Number__c.field-meta.xml
<CustomField>
    <fullName>SA_Number__c</fullName>
    <description>28757 Required for chatter message. OOTB number was creating Topic record when added into the chatter messages for rejection and cannot complete</description>
    <formula>AppointmentNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SA_Number</label>
    <type>Text</type>
</CustomField>