force-app/main/default/objects/ServiceAppointment/fields/Searchable_Formatted_Address__c.field-meta.xml
<CustomField>
    <fullName>Searchable_Formatted_Address__c</fullName>
    <description>A searchable text field to allow the user to search the Service Appointment records by address.

ADO #36684</description>
    <label>Searchable Formatted Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>