force-app/main/default/objects/ServiceAppointment/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>ADO 28663</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Types_of_Work</valueSetName>
    </valueSet>
</CustomField>