force-app/main/default/objects/ServiceAppointment/fields/Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Type_Formula__c</fullName>
    <description>28058</description>
    <formula>IF(TEXT( Type__c )=&apos;Other&apos;,  Other_Type__c ,TEXT( Type__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Service Appointment Type</inlineHelpText>
    <label>Type</label>
    <type>Text</type>
</CustomField>