force-app/main/default/objects/ServiceAppointment/fields/WO_Primary_Resource__c.field-meta.xml
<CustomField>
    <fullName>WO_Primary_Resource__c</fullName>
    <description>#28051 Show in Field Set Expanded</description>
    <formula>Work_Order__r.Primary_Resource__r.Service_Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WO Primary Resource</label>
    <type>Text</type>
</CustomField>