force-app/main/default/objects/ServiceAppointment/recordTypes/NPLUS_Basic.recordType-meta.xml
<RecordType>
    <fullName>NPLUS_Basic</fullName>
    <active>true</active>
    <description>Basic Service Appointment for NPLUS</description>
    <label>NPLUS Basic</label>
</RecordType>