force-app/main/default/objects/ServiceAppointment/validationRules/ISBLANK_ACCOUNT.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_ACCOUNT</fullName>
    <active>true</active>
    <description>28653</description>
    <errorConditionFormula>AND(NOT(ISNEW()),
RecordType.DeveloperName=&quot;NPLUS_Basic&quot;, 
ISBLANK( AccountId ))</errorConditionFormula>
    <errorMessage>Account should not be missing for NPLUS_Basic record types</errorMessage>
</ValidationRule>