force-app/main/default/objects/ServiceAppointment/validationRules/ISBLANK_SERVICE_TERRITORY.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_SERVICE_TERRITORY</fullName>
    <active>true</active>
    <description>28653</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;NPLUS_Basic&quot;, 
ISBLANK( ServiceTerritoryId  ))</errorConditionFormula>
    <errorMessage>Territory should not be missing for NPLUS_Basic record types</errorMessage>
</ValidationRule>