force-app/main/default/objects/ServiceAppointment/validationRules/ISBLANK_STATUS.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_STATUS</fullName>
    <active>true</active>
    <description>28653</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName=&quot;NPLUS_Basic&quot;, 
TEXT( Status   )=&apos;&apos;)</errorConditionFormula>
    <errorMessage>Status should not be missing for NPLUS_Basic record types</errorMessage>
</ValidationRule>