force-app/main/default/objects/ServiceAppointment/validationRules/ISBLANK_WORK_ORDER.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_WORK_ORDER</fullName>
    <active>true</active>
    <description>28051 To support the gantt field sets and more the Work Order lookup was required.</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName&lt;&gt;&quot;&quot;, 

ISBLANK( Work_Order__c  ))</errorConditionFormula>
    <errorMessage>Work Order should not be missing for NPLUS_Basic record types</errorMessage>
</ValidationRule>