force-app/main/default/objects/ServiceAppointment/validationRules/ISCHANGED_SERVICE_TERRITORY.validationRule-meta.xml
<ValidationRule>
    <fullName>ISCHANGED_SERVICE_TERRITORY</fullName>
    <active>true</active>
    <description>28653</description>
    <errorConditionFormula>AND( $Profile.Name &lt;&gt;&apos;System Administrator&apos;, RecordType.DeveloperName = &apos;NPLUS_Basic&apos;,
ISCHANGED(  ServiceTerritoryId  ))</errorConditionFormula>
    <errorMessage>Territory should not change. You may cancel and recreate a as needed or contact a System Adminstrator.</errorMessage>
</ValidationRule>