force-app/main/default/objects/ServiceAppointment/validationRules/ISCHANGED_WORK_ORDER.validationRule-meta.xml
<ValidationRule>
    <fullName>ISCHANGED_WORK_ORDER</fullName>
    <active>true</active>
    <description>28051 Unless updating a historical record then changing the WO should never happen. SF doesn&apos;t allow reparenting SAs and neither do we!</description>
    <errorConditionFormula>AND(  $User.Profile_Name__c &lt;&gt; &apos;System Administrator&apos;, RecordType.DeveloperName &lt;&gt; &apos;&apos;, 
ISCHANGED(  Work_Order__c ),
PRIORVALUE(Work_Order__c)&lt;&gt;&apos;&apos;)</errorConditionFormula>
    <errorMessage>Work Order should not be changed unless it was previously blank</errorMessage>
</ValidationRule>