force-app/main/default/objects/ServiceAppointment/validationRules/Prevent_Deletion.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Deletion</fullName>
    <active>true</active>
    <description>46698 Prevents record deletion. See related flow</description>
    <errorConditionFormula>Prevent_Deletion__c</errorConditionFormula>
    <errorMessage>Service Appointment Cannot be Deleted</errorMessage>
</ValidationRule>