force-app/main/default/objects/ServiceAppointment/listViews/Open_Appointments.listView-meta.xml
<ListView>
    <fullName>Open_Appointments</fullName>
    <columns>Mobile_App_List_Line_1__c</columns>
    <columns>Mobile_App_List_Line_2__c</columns>
    <filterScope>AssignedToMe</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Dispatched,In Progress</value>
    </filters>
    <label>Open Appointments</label>
    <sharedTo>
        <group>SFS_Users</group>
    </sharedTo>
</ListView>