force-app/main/default/objects/ServiceAppointment/listViews/pintest.listView-meta.xml
<ListView>
    <fullName>pintest</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>FSL__Pinned__c</columns>
    <filterScope>Mine</filterScope>
    <label>pintest</label>
</ListView>