force-app/main/default/objects/ServiceAppointment/listViews/X1078_Service_Appointments.listView-meta.xml
<ListView>
    <fullName>X1078_Service_Appointments</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>WorkType</columns>
    <columns>Assigned_Resource__c</columns>
    <columns>LatestEndTime</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>Formatted_Address__c</columns>
    <columns>ActualStartTime</columns>
    <columns>ActualEndTime</columns>
    <filterScope>Everything</filterScope>
    <label>1078 Service Appointments</label>
    <sharedTo>
        <group>X1078</group>
    </sharedTo>
</ListView>